force-app/main/default/objects/Availability_Pattern_Role__c/Availability_Pattern_Role__c.object-meta.xml
<CustomObject>
    <description>Defines how many number of roles of each role are required for an AP under a CO and minimum number of role per role</description>
    <label>Availability Pattern Role</label>
    <nameField>
        <label>Availability Pattern Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Pattern Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>