force-app/main/default/objects/Availability_Pattern_Role__c/fields/Actual_Count_of_Role__c.field-meta.xml
<CustomField>
    <fullName>Actual_Count_of_Role__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>Actual Count of Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>