force-app/main/default/objects/Availability_Pattern_Role__c/fields/Availability_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Availability_Pattern__c</fullName>
    <formula>Collection_Operation_Availability__r.Availability_Pattern__c</formula>
    <label>Availability Pattern</label>
    <type>Text</type>
</CustomField>