force-app/main/default/objects/Availability_Pattern_Role__c/fields/Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation__c</fullName>
    <formula>Collection_Operation_Availability__r.Collection_Operation__c</formula>
    <label>Collection Operation</label>
    <type>Text</type>
</CustomField>