force-app/main/default/objects/Availability_Pattern_Role__c/fields/Collection_Operation_Availability__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of HRP-1522</description>
    <label>Collection Operation Availability</label>
    <referenceTo>Collection_Operation_Availability__c</referenceTo>
    <relationshipLabel>Availability Pattern Roles</relationshipLabel>
    <relationshipName>Availability_Pattern_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>