force-app/main/default/objects/Availability_Pattern_Role__c/fields/Min_Nbr_of_Role__c.field-meta.xml
<CustomField>
    <fullName>Min_Nbr_of_Role__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created as part of HRP-1522</description>
    <label>Min Nbr of Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>