force-app/main/default/objects/Availability_Pattern_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Roles</valueSetName>
    </valueSet>
</CustomField>