force-app/main/default/objects/Availability_Pattern_Role__c/validationRules/Total_Actual_Roles_Change_SysAdmin.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Actual_Roles_Change_SysAdmin</fullName>
    <active>true</active>
    <description>Only system admin can change total actual role count</description>
    <errorConditionFormula>AND(
NOT($User.FirstName &amp; &apos; &apos; &amp; $User.LastName = &apos;Automated Process&apos;),
NOT($Profile.Name = &apos;System Administrator&apos;),
OR(
AND(
ISNEW(),
NOT(ISBLANK( Actual_Count_of_Role__c ))
),
ISCHANGED( Actual_Count_of_Role__c )
)
)</errorConditionFormula>
    <errorDisplayField>Actual_Count_of_Role__c</errorDisplayField>
    <errorMessage>Only System Admins are allowed to modify this field</errorMessage>
</ValidationRule>